--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,16 @@
 	<properties>
 		<java.version>17</java.version>
 		<sonar.host.url>http://localhost:9000</sonar.host.url>
-    	<sonar.token>TOKEN</sonar.token>
+		<sonar.projectKey>my-spring-exb2-project</sonar.projectKey>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
